按用户列出设备时，同时查找来自所在家庭组的设备